Update YAML and Database
- Updated database (locally) to include a primary key that is  auto incrementing. Will most likely host database online.
- Updated YAML structure.
